# brain

./: .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  NEURONS.md  README.md  SPEC_CHANGE_REQUEST.md  STAGING_COPY_REPORT.md  TEMPLATE_DRIFT_REPORT.md  THOUGHTS.md  new-project.sh  setup-linters.sh  setup.sh
.verify/: ac.sha256  agents.sha256  approve_waiver_totp.py  check_waiver.sh  latest.txt  launch_approve_waiver.sh  loop.sha256  plan_snapshot.md  prompt.sha256  request_waiver.sh  run_id.txt  verifier.sha256
artifacts/: brain_metrics.json  dashboard.html  optimization_hints.md
cortex/: AGENTS.md  AGENT_LOADING_ANALYSIS.md  CORTEX_SYSTEM_PROMPT.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  NEURONS.md  PLAN_DONE.md  REPO_MAP.md  THOUGHTS.md  TOKEN_EFFICIENCY_ANALYSIS.md  cleanup_cortex_plan.sh  ralph.sh  (+5 more)
tools/rollflow_analyze/: README.md  __init__.py  __main__.py  pyproject.toml
tools/rollflow_analyze/src/rollflow_analyze/: __init__.py  __main__.py  cache_db.py  cli.py  models.py  report.py  review_pack.py
tools/rollflow_analyze/src/rollflow_analyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tools/rollflow_analyze/src/rollflow_analyze/config/: patterns.example.yaml
tools/rollflow_analyze/src/rollflow_analyze/parsers/: __init__.py  heuristic_parser.py  marker_parser.py  rovodev_parser.py
tools/rollflow_analyze/tests/: __init__.py  test_heuristic_parser.py  test_marker_parser.py  test_report_shape.py  test_triple_colon_markers.py
(+604 files in other folders)
